--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.30.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@cypress/react": "^5.12.4",
+    "@cypress/webpack-dev-server": "^1.8.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
     "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.1",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.6.2"
+    "typescript": "4.6.2",
+    "webpack": "^5.70.0",
+    "webpack-dev-server": "^4.7.4"
   }
 }
